--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -131,8 +131,7 @@ pre,
 code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+    background-color: #f5f5f5;
 }
 
 code {
@@ -203,4 +202,12 @@ pre {
             fill: $grey-color;
         }
     }
+}
+
+
+/**
+ * Monospace font
+ */
+%monospace {
+    font-family: monospace;
 }
