--- a/_sass/_tabs.scss
+++ b/_sass/_tabs.scss
@@ -6,7 +6,7 @@
 
     li {
       @extend %monospace;
-      padding: 5px 10px;
+      padding: 3px 10px;
       float: left;
       cursor: pointer;
       background: #e8e8e8;
@@ -22,6 +22,7 @@
     }
 
     li.active.ruby { background: #d9365c }
+    li.active.elixir { background: #7a51e5 }
     li.active.javascript { background: #ffb70f }
 
     margin: 0;
