Add snapchat social icon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,12 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          {% if site.snapchat_username %}
+          <li>
+            {% include icon-snapchat.html username=site.snapchat_username %}
+          </li>
+          {% endif %}
         </ul>
       </div>
 
