--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,9 @@
     </div>
 
     {% include footer.html %}
-    {% include ga.html %}
+    {% if jekyll.environment == "production" %}
+      {% include ga.html %}
+    {% endif %}
     {% include scripts.html %}
   </body>
 
